# SC26-12

./: .gitignore  FinancialReportAssistant_MANUAL_20260717.md  README.md  app.py  pyproject.toml  requirements.txt  start_app.py
configs/: calendar_rules.yaml  indicators.yaml  paths.yaml
disclosure/: __init__.py  domain.py  sources.py  storage.py
disclosure/data/: disclosure_db.json  peer_total_assets.json
fia/: __init__.py  cninfo.py  config.py  logging_config.py  models.py  parser.py  service.py  web.py
lookupfiles/: STK_LISTEDCOINFOANL[DES][xlsx].txt  web_address.txt
scripts/: resolve_company.py  run_calendar.py  run_financial.py
src/fintrace/: __init__.py
src/fintrace/api/: __init__.py  app.py
src/fintrace/calendar/: __init__.py  cninfo.py  models.py  normalization.py  pipeline.py
src/fintrace/cli/: calendar.py  company.py  financial.py
src/fintrace/financial/: __init__.py  pipeline.py  viewer_template.html
src/fintrace/shared/: __init__.py  company_resolver.py  exceptions.py  file_store.py  models.py  paths.py  run_context.py
static/: app.js  index.html  styles.css
tests/: smoke_analysis.py  test_api.py  test_calendar_pipeline.py  test_cninfo.py  test_combined_app.py  test_company_resolver.py  test_financial_pipeline.py  test_logging.py  test_parser.py  test_paths.py  test_run_context.py  test_startup_bootstrap.py  test_static_assets.py  test_ui_contract.py  verify_delisi.py  verify_moutai.py
tests/fixtures/calendar/: 600519_events.csv
