[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fintrace"
version = "0.1.0"
description = "Traceable financial report analysis backend"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
  "fastapi>=0.116,<1",
  "httpx>=0.28,<1",
  "openpyxl>=3.1,<4",
  "pdfplumber>=0.11,<1",
  "pydantic>=2.11,<3",
  "pydantic-settings>=2.9,<3",
  "PyMuPDF>=1.26,<2",
  "pypdf>=5.8,<7",
  "PyYAML>=6.0,<7",
  "uvicorn>=0.35,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-cov>=6.1,<7",
  "ruff>=0.12,<1",
]

[project.scripts]
fintrace-company = "fintrace.cli.company:main"
fintrace-api = "fintrace.api.app:run"

[tool.hatch.build.targets.wheel]
packages = ["src/fintrace"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
